// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default-binding.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source from "x";

=====================================output=====================================
import source from "x";

================================================================================
`;

exports[`import-source.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source x from "x";

=====================================output=====================================
import source x from "x";

================================================================================
`;

exports[`import-source.js format 2`] = `
"Unexpected token (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source.js format 3`] = `
"Unexpected token x (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: Unexpected token x"
`;

exports[`import-source.js format 4`] = `
"Expected 'from' (1:15)
> 1 | import source x from "x";
    |               ^
  2 |
Cause: [1:14-1:15]: Expected 'from'"
`;

exports[`import-source-attributes-declaration.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source s from "x" with { attr: "val" };

=====================================output=====================================
import source s from "x" with { attr: "val" };

================================================================================
`;

exports[`import-source-attributes-declaration.js format 2`] = `
"Unexpected token (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source-attributes-declaration.js format 3`] = `
"Unexpected token s (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: Unexpected token s"
`;

exports[`import-source-attributes-declaration.js format 4`] = `
"Expected 'from' (1:15)
> 1 | import source s from "x" with { attr: "val" };
    |               ^
  2 |
Cause: [1:14-1:15]: Expected 'from'"
`;

exports[`import-source-attributes-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.source("x", { with: { attr: "val" } });

=====================================output=====================================
import.source("x", { with: { attr: "val" } });

================================================================================
`;

exports[`import-source-attributes-expression.js format 2`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-source-attributes-expression.js format 3`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source-attributes-expression.js format 4`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("x", { with: { attr: "val" } });
    |        ^^^^^^
  2 |
Cause: [1:7-1:13]: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source-binding-from.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source from from "x";

=====================================output=====================================
import source from from "x";

================================================================================
`;

exports[`import-source-binding-from.js format 2`] = `
"Unexpected token (1:20)
> 1 | import source from from "x";
    |                    ^
  2 |
Cause: Unexpected token (1:19)"
`;

exports[`import-source-binding-from.js format 3`] = `
"Unexpected token from (1:20)
> 1 | import source from from "x";
    |                    ^
  2 |
Cause: Unexpected token from"
`;

exports[`import-source-binding-from.js format 4`] = `
"Import source must be string (1:20)
> 1 | import source from from "x";
    |                    ^^^^
  2 |
Cause: [1:19-1:23]: Import source must be string"
`;

exports[`import-source-binding-source.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import source source from "x";

=====================================output=====================================
import source source from "x";

================================================================================
`;

exports[`import-source-binding-source.js format 2`] = `
"Unexpected token (1:15)
> 1 | import source source from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`import-source-binding-source.js format 3`] = `
"Unexpected token source (1:15)
> 1 | import source source from "x";
    |               ^
  2 |
Cause: Unexpected token source"
`;

exports[`import-source-binding-source.js format 4`] = `
"Expected 'from' (1:15)
> 1 | import source source from "x";
    |               ^^^^^^
  2 |
Cause: [1:14-1:20]: Expected 'from'"
`;

exports[`import-source-dynamic-import.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.source("foo");

=====================================output=====================================
import.source("foo");

================================================================================
`;

exports[`import-source-dynamic-import.js format 2`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-source-dynamic-import.js format 3`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source-dynamic-import.js format 4`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("foo");
    |        ^^^^^^
  2 |
Cause: [1:7-1:13]: The only valid meta property for import is 'import.meta'"
`;

exports[`no-named.js format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:17)
> 1 | import source { x } from "x";
    |                 ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:16)"
`;

exports[`no-named.js format 2`] = `
"Unexpected token (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`no-named.js format 3`] = `
"Unexpected token { (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: Unexpected token {"
`;

exports[`no-named.js format 4`] = `
"Expected 'from' (1:15)
> 1 | import source { x } from "x";
    |               ^
  2 |
Cause: [1:14-1:15]: Expected 'from'"
`;

exports[`no-named.js format 5`] = `
"Only a single default import is allowed in a source phase import. (1:8)
> 1 | import source { x } from "x";
    |        ^^^^^^
  2 |"
`;

exports[`no-named.js format 6`] = `
"Only \`import source x from "./module"\` is valid. (1:17)
> 1 | import source { x } from "x";
    |                 ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:16)"
`;

exports[`no-namespace.js format 1`] = `
"Only \`import source x from "./module"\` is valid. (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:14)"
`;

exports[`no-namespace.js format 2`] = `
"Unexpected token (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`no-namespace.js format 3`] = `
"Unexpected token * (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Unexpected token *"
`;

exports[`no-namespace.js format 4`] = `
"Expected 'from' (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: [1:14-1:15]: Expected 'from'"
`;

exports[`no-namespace.js format 5`] = `
"Only a single default import is allowed in a source phase import. (1:8)
> 1 | import source * as x from "x";
    |        ^^^^^^
  2 |"
`;

exports[`no-namespace.js format 6`] = `
"Only \`import source x from "./module"\` is valid. (1:15)
> 1 | import source * as x from "x";
    |               ^
  2 |
Cause: Only \`import source x from "./module"\` is valid. (1:14)"
`;
